--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="./assets/img/favicon.png">
@@ -24,7 +23,7 @@
  
 <body class="index-page sidebar-collapse">
      <br />     <br />     <br />     <br />
-       <h1 class='text-center'>Renato Ávila no Github</h1>
+       <h1 class='text-center'>Renato Ávila no Github.io</h1>
 </body>
 <!--   Core JS Files   -->
  
